--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                 </div>
               </div>
-              
+
+              <div class="form-group mt-3">
+                <textarea class="form-control" name="message" rows="1" placeholder="Code word from invite" ></textarea>
+              </div>
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Will you be able to join us?" required>
@@ -151,6 +154,7 @@
                 <div class="col-md-6 form-group mt-3 mt-md-0">
                   <input type="text" class="form-control" name="email" id="email" placeholder="Dietary Requirements/Allergies?" required>
                 </div>
+                
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Additional message?" ></textarea>
               </div>
