--- a/index.html
+++ b/index.html
@@ -109,44 +109,38 @@
     <section id="portfolio" class="portfolio">
       <div class="container">
 
-        <div class="section-title">
-          <h2>Portfolio</h2>
-          <h3>Check our <span>Portfolio</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
-        </div>
-
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>First year</h4>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Second year</h4>
             </div>
           </div>
 
          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/3.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Third year</h4>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/4.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Fourth year</h4>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/5.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Fifth year</h4>
               <p>Web</p>
@@ -154,14 +148,14 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/6.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Sixth year</h4>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/7.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Seventh year</h4>
               <p>Web</p>
@@ -169,7 +163,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/8.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Eighth year</h4>
               <p>Web</p>
@@ -177,7 +171,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/9.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>First year</h4>
             </div>
