--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
             <img src="assets/img/portfolio/7.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Seventh year</h4>
-              <p>Web</p>
             </div>
           </div>
 
@@ -166,14 +165,13 @@
             <img src="assets/img/portfolio/8.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Eighth year</h4>
-              <p>Web</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/9.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>First year</h4>
+              <h4>Engaged!</h4>
             </div>
           </div>
 
