--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/icon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -185,7 +185,8 @@
     <section id="contact" class="contact">
       <div class="container">
         <div class="section-title">
-          <h3>RSVP</h3>
+          <h3>**INACTIVE** RSVP</h3>
+          <p>This is currently not connected to an email address! Please do not RSVP yet!</p>
           <p>Please fill out one RSVP form per attendee!</p>
         </div>
 
