--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <h1>Alannah King & Chris Jensen</h1>
       <h2>2pm, 9th of January 2025</h2>
       <h2>Trinity Hall, Cambridge</h2>
+      <a href="#contact" class="btn-get-started scrollto">RSVP</a>
     </div>
   </section><!-- End Hero -->
 
@@ -69,8 +70,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h3>Hello! Welcome to our wedding website!</h3>
-          <a href="#RSVP" class="btn-get-started scrollto">RSVP</a>
+          <h3>Hello! Glad you found us!</h3>
         </div>
         <div class="row content">
           <div class="col-lg-6">
@@ -96,7 +96,7 @@
             </p>
             <p>
               We are hoping to hold a larger party within the next year to celebrate with our wider circle! We really hope that you can make it, 
-              and look forward to seeing you there!
+              and look forward to seeing you there! Check back periodically - we'll update things like the menu when we know more!
             </p>
           </div>
         </div>
