--- a/index.html
+++ b/index.html
@@ -213,9 +213,6 @@
                 </div>
               </div>
 
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="1" placeholder="Code word from invite" ></textarea>
-              </div>
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Will you be able to join us?" required>
@@ -257,6 +254,7 @@
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Trinity Hall photo credit to Mary Hockaday, Master of Trinity Hall
         </div>
       </div>
 
