--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          Trinity Hall photo credit to Mary Hockaday, Master of Trinity Hall
+          <p>Trinity Hall photo credit to Mary Hockaday, Master of Trinity Hall</p>
         </div>
       </div>
 
