--- a/index.html
+++ b/index.html
@@ -216,14 +216,13 @@
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="rsvp" placeholder="Will you be able to join us?" required>
-                    <div class="input-group mb-3">
-  <div class="input-group-prepend">
-    <div class="input-group-text">
-      <input type="checkbox" aria-label="Checkbox for following text input">
+                    <div class="form-group col-md-4">
+      <label for="inputState">State</label>
+      <select id="inputState" class="form-control">
+        <option selected>Choose...</option>
+        <option>...</option>
+      </select>
     </div>
-  </div>
-  <input type="text" class="form-control" aria-label="Text input with checkbox">
-</div>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
                   <input type="text" class="form-control" name="email" id="food" placeholder="Dietary Requirements/Allergies?" required>
