--- a/index.html
+++ b/index.html
@@ -215,12 +215,13 @@
 
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="rsvp" placeholder="Will you be able to join us?" required>
-                    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
+      <label for="inputState">Will you be able to join us?</label>
       <select id="inputState" class="form-control">
         <option selected>Choose...</option>
-        <option>...</option>
+        <option>Yes!</option>
+        <option>Only the ceremony</option>
+        <option>Only the dinner</option>
+        <option>Sadly not</option>
       </select>
     </div>
                 </div>
