--- a/index.html
+++ b/index.html
@@ -215,9 +215,8 @@
 
               <div class="row">
                 <div class="col-md-6 form-group">
-      <label for="inputState">Will you be able to join us?</label>
       <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
+        <option selected>Will you be able to join us?</option>
         <option>Yes!</option>
         <option>Only the ceremony</option>
         <option>Only the dinner</option>
