--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               </div>
             </div>
             <div class="col-lg-8 mt-5 mt-lg-0">
-              <form action="rsvp.jenking.com/rsvp" method="post" role="form" class="php-email-form">
+              <form action="https://rsvp.jensenking.com/rsvp" method="post" role="form" class="php-email-form">
                 <div class="row">
                   <div class="col-md-6 form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -221,7 +221,7 @@
                         <p class="rsvp-label">Can you make it?</p>
                       </div>
                       <div class="col-md-6">
-                        <select id="rsvp" class="rsvp-yn form-control">
+                        <select name="rsvp" id="rsvp" class="rsvp-yn form-control">
                           <option selected="">Yes</option>
                           <option> No</option>
                         </select>
@@ -229,7 +229,7 @@
                     </div>
                   </div>
                   <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input type="text" class="form-control" name="email" id="food" placeholder="Dietary Requirements/Allergies?" required>
+                    <input type="text" class="form-control" name="diet" id="food" placeholder="Dietary Requirements/Allergies?" required>
                   </div>
 
                   <div class="form-group mt-3">
