--- a/index.html
+++ b/index.html
@@ -184,19 +184,19 @@
       <section id="contact" class="contact">
         <div class="container">
           <div class="section-title">
-            <h3>**INACTIVE** RSVP</h3>
-            <p>This is currently not connected to an email address! Please do not RSVP yet!</p>
-            <p>Please fill out one RSVP form per attendee!</p>
+            <h3>RSVP</h3>
+            <p>Please fill out one RSVP form per attendee, so we can match dietary requirements to food!</p>
+            <p>We look forward to seeing you there!</p>
           </div>
 
           <div class="row mt-5">
             <div class="col-lg-4">
               <div class="info">
                 <div class="address">
-                  <p>We really hope you can make it, and look forward to seeing you there!</p>
+                  <p>This webpage was built by Alannah, and the RSVP form was built by Chris. All the data is stored on our home server (his name is Jasper).</p>
                 </div>
                 <div class="email">
-                  <i class="bi bi-envelope"></i>
+                  
                   <h4>Email:</h4>
                   <p>thejensenkings@gmail.com</p>
                 </div>
