--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
               homemade wedding cake. Everything is on the one site, so no need for travel between venues! 
               </p>
               <p>
+              If you'd like to stay the night, you can get in contract with Trinity Hall to potentially book at room there.
+              </p>
+              <p>
               This is our very small wedding ceremony with only our closest friends and family, as we both prefer it that way. As the wedding is so small, we can
               only have plus ones that have been invited by name on the invitation. Finally, please don't worry about gifts - we don't want or
               need anything, your attendance is plenty of a gift!
