--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section id="hero">
       <div class="hero-container">
         <h1>Alannah King & Chris Jensen</h1>
-        <h2>2pm, 9th of January 2025</h2>
+        <h2>**1pm**, 9th of January 2025</h2>
         <h2>Trinity Hall, Cambridge</h2>
         <a href="#contact" class="btn-get-started scrollto">RSVP</a>
       </div>
@@ -70,7 +70,7 @@
         <div class="container">
 
           <div class="section-title">
-            <h3>Hello! Glad you found us!</h3>
+            <h3>** Time Change: Ceremony starts at 1pm **</h3>
           </div>
           <div class="row content">
             <div class="col-lg-6">
@@ -85,9 +85,8 @@
               </p>
               <p>
               The dress code is semi-formal, but the most important thing is that you are warm and comfortable (It is January, after all!). 
-              We'll have a small ceremony at 2pm, followed by some time for drinks,
-              canapés, and general celebration. Afterwards we'll be having a wonderful three-course dinner at Trinity Hall, finished with (hopefully!)
-              homemade wedding cake. Everything is on the one site, so no need for travel between venues! 
+              We'll have a small ceremony at 1pm, followed by some time for drinks,
+              canapés, and general celebration. Afterwards we'll be having a wonderful three-course dinner at Trinity Hall, finished with cake. Everything is on the one site, so no need for travel between venues! 
               </p>
               <p>
               If you'd like to stay the night, you can get in contract with Trinity Hall to potentially book at room there.
