--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+            <li><a class="nav-link scrollto" href="#timings">Timings</a></li>
+            <li><a class="nav-link scrollto" href="#food">Food</a></li>
             <li><a class="nav-link scrollto" href="#contact">RSVP</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -105,6 +107,42 @@
 
         </div>
       </section><!-- End About Section -->
+
+      <!-- timings section --> 
+      <section id="timings" class="timings">
+        <div class="container">
+
+          <div class="section-title">
+            <h3>** Time Change: Ceremony starts at 1pm **</h3>
+          </div>
+          <div class="row content">
+            <div class="col-lg-6 pt-4 pt-lg-0">
+              <p>
+              TBC
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </section><!-- End timings Section -->
+
+            <!-- timings section --> 
+      <section id="food" class="food">
+        <div class="container">
+
+          <div class="section-title">
+            <h3>** Time Change: Ceremony starts at 1pm **</h3>
+          </div>
+          <div class="row content">
+            <div class="col-lg-6 pt-4 pt-lg-0">
+              <p>
+              TBC
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </section><!-- End timings Section -->
 
 
       <!-- ======= Portfolio Section ======= -->
