--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="container">
 
           <div class="section-title">
-            <h3>** Time Change: Ceremony starts at 1pm **</h3>
+            <h3>Timings</h3>
           </div>
           <div class="row content">
             <div class="col-lg-6 pt-4 pt-lg-0">
@@ -131,7 +131,7 @@
         <div class="container">
 
           <div class="section-title">
-            <h3>** Time Change: Ceremony starts at 1pm **</h3>
+            <h3>Menu</h3>
           </div>
           <div class="row content">
             <div class="col-lg-6 pt-4 pt-lg-0">
@@ -140,8 +140,20 @@
               </p>
             </div>
           </div>
-
         </div>
+
+       <div class="section-title">
+            <h3>Seating Plan</h3>
+          </div>
+          <div class="row content">
+            <div class="col-lg-6 pt-4 pt-lg-0">
+              <p>
+              TBC
+              </p>
+            </div>
+          </div>
+        </div>
+        
       </section><!-- End timings Section -->
 
 
