--- a/index.html
+++ b/index.html
@@ -131,19 +131,7 @@
         <div class="container">
 
           <div class="section-title">
-            <h3>Menu</h3>
-          </div>
-          <div class="row content">
-            <div class="col-lg-6 pt-4 pt-lg-0">
-              <p>
-              TBC
-              </p>
-            </div>
-          </div>
-        </div>
-
-       <div class="section-title">
-            <h3>Seating Plan</h3>
+            <h3>Food</h3>
           </div>
           <div class="row content">
             <div class="col-lg-6 pt-4 pt-lg-0">
