--- a/index.html
+++ b/index.html
@@ -133,13 +133,20 @@
           <div class="section-title">
             <h3>Food</h3>
           </div>
-          <div class="row content">
+<div class="row content">
+            <div class="col-lg-6">
+
+              <img src="assets/seatingplan.png" alt="" class="img-fluid">
+
+            </div>
             <div class="col-lg-6 pt-4 pt-lg-0">
               <p>
-              TBC
+              Menu TBC
               </p>
             </div>
           </div>
+
+          
         </div>
         
       </section><!-- End timings Section -->
