--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <div class="row content">
             <div class="col-lg-6">
 
-              <img src="assets/seatingplan.png" alt="" class="img-fluid">
+              <img src="assets/img/seatingplan.png" alt="" class="img-fluid">
 
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0">
