--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#timings">Timings</a></li>
             <li><a class="nav-link scrollto" href="#food">Food</a></li>
-            <li><a class="nav-link scrollto" href="#contact">RSVP</a></li>
+            <li><a class="nav-link scrollto" href="#contact">Reception RSVP</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
@@ -231,8 +231,8 @@
       <section id="contact" class="contact">
         <div class="container">
           <div class="section-title">
-            <h3>RSVP</h3>
-            <p>Please fill out one RSVP form per attendee, so we can match dietary requirements to food!</p>
+            <h3>Reception RSVP</h3>
+            <p>We'll be in the Trinity Hall bar, the Aula, from </p>
             <p>We look forward to seeing you there!</p>
           </div>
 
