--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0">
               <p>
-              Menu TBC
+              <h2>Vegetarian/Vegan Menu</h2>
+
+              <h2>Meat Menu</h2>
+                
               </p>
             </div>
           </div>
