--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <div class="row content">
             <div class="col-lg-6">
 
-              <img src="assets/img/RingMaking.jpeg" alt="" class="img-fluid">
+              <img src="assets/img/RingMaking.jpeg" alt="" class="img-fluid" style="width: 50%;">
 
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0">
