--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
           </div>
           <div class="row content">
             <div class="col-lg-6 pt-4 pt-lg-0">
-              <p>
-              TBC
-              </p>
+               <img src="assets/img/Timings.png" alt="" class="img-fluid">
             </div>
           </div>
 
