--- a/index.html
+++ b/index.html
@@ -136,10 +136,24 @@
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0">
               <p>
-              <h2>Vegetarian/Vegan Menu</h2>
-
-              <h2>Meat Menu</h2>
-                
+              <h2>Starter</h2>
+              <p>
+              Crispy Fried Tempeh Goujons with Miso & Peanut Sauce, Chilli Oil, Toasted Peanuts and Coriander Cress
+              </p>
+              <p>
+              Moroccan-Style Pulled Lamb Shoulder with Crispy Rosemary Gnocchi, Apricot & Butternut Squash Purée and Crumbled Feta 
+              </p>
+              <h2>Main</h2>
+            <p>
+              Beetroot Tarte Tatin with Parsnip Purée, Baby Parsnip, Wilted Greens, Crispy Kale and Red Wine Vinegar Dressing
+              </p>
+              <p>
+              Breast of Pheasant with Roasted Root Vegetable Arancini, Sautéed Leeks & Cabbage, Sage & Pancetta and Redcurrant Jus
+              </p>
+              <h2>Dessert</h2>
+              <p>
+              Stem Ginger Cake with Caramel Sauce and Spiced Rum Ice Cream
+              </p>
               </p>
             </div>
           </div>
