--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h3>Food</h3>
           </div>
 <div class="row content">
-            <div class="col-lg-6" style="text-align: center;">
+            <div class="col-lg-6" style="text-align: center">
 
               <img src="assets/img/SeatingPlan.png" alt="" class="img-fluid">
 
