--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
             <h3>Food</h3>
           </div>
 <div class="row content">
-            <div class="col-lg-6" style="text-align: center">
+            <div class="col-lg-6">
 
               <img src="assets/img/SeatingPlan.png" alt="" class="img-fluid">
 
             </div>
-            <div class="col-lg-6 pt-4 pt-lg-0">
+            <div class="col-lg-6 pt-4 pt-lg-0" style="text-align: center;">
               <p>
               <h2>Starter</h2>
               <p>
