--- a/index.html
+++ b/index.html
@@ -136,12 +136,16 @@
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0" style="text-align: center;">
               <p>
+                We have passed on all dietary requirements to college at this point, along with the seating plan. Please drop us a message if you have any concerns!
+              </p>
+              <p>
               <h2>Starter</h2>
               <p>
               Crispy Fried Tempeh Goujons with Miso & Peanut Sauce, Chilli Oil, Toasted Peanuts and Coriander Cress
               </p>
               <p>
               Moroccan-Style Pulled Lamb Shoulder with Crispy Rosemary Gnocchi, Apricot & Butternut Squash Purée and Crumbled Feta 
+              <br>
               </p>
               <h2>Main</h2>
             <p>
@@ -149,10 +153,14 @@
               </p>
               <p>
               Breast of Pheasant with Roasted Root Vegetable Arancini, Sautéed Leeks & Cabbage, Sage & Pancetta and Redcurrant Jus
+              <br>
               </p>
               <h2>Dessert</h2>
               <p>
               Stem Ginger Cake with Caramel Sauce and Spiced Rum Ice Cream
+              </p>
+              <p>
+              Fairtrade Coffee and Chocolates
               </p>
               </p>
             </div>
