--- a/index.html
+++ b/index.html
@@ -136,9 +136,6 @@
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0" style="text-align: center;">
               <p>
-                We have passed on all dietary requirements to college at this point, along with the seating plan. Please drop us a message if you have any concerns!
-              </p>
-              <p>
               <h2>Starter</h2>
               <p>
               Crispy Fried Tempeh Goujons with Miso & Peanut Sauce, Chilli Oil, Toasted Peanuts and Coriander Cress
@@ -252,8 +249,8 @@
         <div class="container">
           <div class="section-title">
             <h3>Reception RSVP</h3>
-            <p>We'll be in the Trinity Hall bar, the Aula, from </p>
-            <p>We look forward to seeing you there!</p>
+            <p>We'll be in the Trinity Hall bar, the Aula, from 6:30pm</p>
+            <p>It would be great if you could join us!</p>
           </div>
 
           <div class="row mt-5">
