--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#timings">Timings</a></li>
-            <li><a class="nav-link scrollto" href="#food">Food</a></li>
+            <li><a class="nav-link scrollto" href="#food">Dinner</a></li>
             <li><a class="nav-link scrollto" href="#contact">Reception RSVP</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -126,7 +126,7 @@
         <div class="container">
 
           <div class="section-title">
-            <h3>Food</h3>
+            <h3>Dinner</h3>
           </div>
 <div class="row content">
             <div class="col-lg-6">
