--- a/index.html
+++ b/index.html
@@ -94,13 +94,12 @@
               If you'd like to stay the night, you can get in contract with Trinity Hall to potentially book at room there.
               </p>
               <p>
-              This is our very small wedding ceremony with only our closest friends and family, as we both prefer it that way. As the wedding is so small, we can
-              only have plus ones that have been invited by name on the invitation. Finally, please don't worry about gifts - we don't want or
+              This is our very small wedding ceremony, though we have got the college bar so additional people can join in the evening. Finally, please don't worry about gifts - we don't want or
               need anything, your attendance is plenty of a gift!
               </p>
               <p>
               We are hoping to hold a larger party within the next year to celebrate with our wider circle! We really hope that you can make it, 
-              and look forward to seeing you there! Check back periodically - we'll update things like the menu when we know more!
+              and look forward to seeing you there! 
               </p>
             </div>
           </div>
