--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <div class="section-title">
             <h3>Reception RSVP</h3>
             <p>We'll be in the Trinity Hall bar, the Aula, from 6:30pm</p>
-            <p>It would be great if you could join us!</p>
+            <p>It would be great if you could join us! RSVP by December 6th, 2024!</p>
           </div>
 
           <div class="row mt-5">
@@ -257,6 +257,7 @@
               <div class="info">
                 <div class="address">
                   <p>This webpage was built by Alannah, and the RSVP form was built by Chris. All the data is stored on our home server (his name is Jasper).</p>
+                  <p>We also make websites for our friends, if you ask nicely :)</p>
                 </div>
                 <div class="email">
                   
