--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
         <div class="container">
           <div class="section-title">
             <h3>Reception RSVP</h3>
-            <p>We'll be in the Trinity Hall bar, the Aula, from 6:30pm</p>
-            <p>It would be great if you could join us! RSVP by December 6th, 2024!</p>
+            <p>It would be great if you could join us in the Trinity Hall bar, the Aula, from 6:30pm</p>
+            <p>Please RSVP by December 6th, 2024! You can add songs to the playlist <a href="https://open.spotify.com/playlist/5mIbpN6QoGFItJYsIAN5QQ?si=f1909cd6e89842fe&pt=fc96e300597f6663d42c1b2215e24493">here.</a></p>
           </div>
 
           <div class="row mt-5">
@@ -257,6 +257,7 @@
               <div class="info">
                 <div class="address">
                   <p>This webpage was built by Alannah, and the RSVP form was built by Chris. All the data is stored on our home server (his name is Jasper).</p>
+                  <br>
                   <p>We also make websites for our friends, if you ask nicely :)</p>
                 </div>
                 <div class="email">
@@ -270,10 +271,10 @@
               <form action="https://rsvp.jensenking.com/rsvp" method="post" role="form" class="php-email-form">
                 <div class="row">
                   <div class="col-md-6 form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Names" required>
                   </div>
                   <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
                   </div>
                 </div>
 
@@ -293,7 +294,7 @@
                     </div>
                   </div>
                   <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input type="text" class="form-control" name="diet" id="food" placeholder="Dietary Requirements/Allergies?" required>
+                    <input type="text" class="form-control" name="diet" id="food" placeholder="Song Requests?" required>
                   </div>
 
                   <div class="form-group mt-3">
@@ -302,7 +303,7 @@
                   <div class="my-3">
                     <div class="loading">Loading</div>
                     <div class="error-message"></div>
-                    <div class="sent-message">Your rsvp has been sent. Thank you!</div>
+                    <div class="sent-message">Your RSVP has been sent. Thank you!</div>
                   </div>
                   <div class="text-center"><button type="submit">Send Message</button></div>
               </form>
