--- a/index.html
+++ b/index.html
@@ -247,9 +247,8 @@
       <section id="contact" class="contact">
         <div class="container">
           <div class="section-title">
-            <h3>Reception RSVP</h3>
-            <p>It would be great if you could join us in the Trinity Hall bar, the Aula, from 6:30pm</p>
-            <p>Please RSVP by December 6th, 2024! You can add songs to the playlist <a href="https://open.spotify.com/playlist/5mIbpN6QoGFItJYsIAN5QQ?si=f1909cd6e89842fe&pt=fc96e300597f6663d42c1b2215e24493">here.</a></p>
+            <h3>CLOSED RSVP</h3>
+            <p>Final numbers are in - Drop us a message if something has changed!</p>
           </div>
 
           <div class="row mt-5">
@@ -303,9 +302,9 @@
                   <div class="my-3">
                     <div class="loading">Loading</div>
                     <div class="error-message"></div>
-                    <div class="sent-message">Your RSVP has been sent. Thank you!</div>
+                    <div class="sent-message">RSVPs are now closed. Send us a message!</div>
                   </div>
-                  <div class="text-center"><button type="submit">Send Message</button></div>
+                  <div class="text-center"><button type="submit">CLOSED</button></div>
               </form>
                 </div>
             </div>
