--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               Thank you all for coming and celebrating with us! We're currently opening cards and gifts and are overwhelmed by how many kind, thoughtful, and special people we have in our lives. 
               </p>
               <p>
-                We've got a Google Album to collect photos, you can click <a href="https://photos.app.goo.gl/XSJz7Rkooe3znqoVA">here.</a> to join the album. Let us know if there are any issues!
+                We've got a Google Album to collect photos, you can click <a href="https://photos.app.goo.gl/XSJz7Rkooe3znqoVA">here</a> to join the album. Let us know if there are any issues!
               </p>
               <p>
                 We've found some lost property - if you're missing some glasses, drop us a message! 
