--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
               <p>
                 The Jensen-Kings
               </p>
+              <p>
+                <a href="https://www.fraserparryphotography.co.uk/wedding-home">Photography by Fraser Parry</a> 
+              </p>
+              <p>
+                <a href="https://www.burrbridal.co.uk/">Dress from Burr Bridal</a> 
+              </p>
+              <p>
+                <a href="https://www.sarahmadsen.co.uk/">Wedding rings made with Sarah Madsen</a> 
+              </p>
+               <p>
+                <a href="https://www.hkjewellery.co.uk/">Engagement ring designed with Harriet Kelsall</a> 
+              </p>
+              <p>
+                <a href="https://www.fitzbillies.com/">Lemon cake from Fitzbillies</a> 
+              </p>
+              <p>
+                <a href="https://www.florenceandflowers.co.uk/home.html">Flowers from Florence and Flowers</a> 
+              </p>
             </div>
           </div>
 
